# HolOrama

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  TODO.md  image_old.py  install.ps1  install.sh  meta.py  metadata_old.py  plan_refactor.md  play.py  pyproject.toml  run.bat
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.yml
docs/: CHANGELOG.md  conf.py  index.rst
docs/contents/: api_references.rst  installation.rst  key_features.rst  related_projects.rst  tutorial.rst  usage.rst  video_tutorial.rst
media/: logo_creater.py
src/: TODO.md  config.yaml  main.py  version.py
src/domain/: all_types.py  ccta_display_types.py  fusion_types.py  io_types.py  mask_types.py  oct_display_types.py  runtime_types.py  undo.py
src/gating/: automatic_gating.py  breathing_pipeline.py  contour_based_gating.py  gating_pipeline.py  gating_plot.py  signal_processing.py
src/gui/: active_page.py  app.py  gui.py  shortcuts.py
src/gui/left_half/: IVUS_display.py  IVUS_display_old.py  IVUS_display_working.py  display.py  left_half.py
src/gui/popup_windows/: frame_range_dialog.py  message_boxes.py  results_plot.py  small_display.py  video_player.py
src/gui/right_half/: gating_display.py  longitudinal_view.py  right_half.py
src/gui/utils/: contours_gui.py  geometry.py  helpers.py  metrics.py  slider.py
src/input_output/: contours_io.py  metadata.py  read_image.py
src/input_output/input/: ccta_io.py  contours.py  dicom_dir.py  image.py  image_new.py  metadata.py  metadata_new.py
src/input_output/output/: contours.py  imgs_masks.py  other_fmt.py  reports.py  stl_export.py
src/pages/ccta/: brush_panel.py  cut_geometry.py  cut_state_io.py  display.py  display_3d.py  mask_panel.py  page.py  progress_worker.py  vmtk_runner.py
src/pages/ccta/left_half/: cut_geometry_viewer.py  display.py  display_3d.py
src/pages/ccta/right_half/: brush_panel.py  mask_panel.py  stl_extraction_panel.py
src/pages/ccta/tool_tab/: tab_gui.py
src/pages/fusion/: colors.py  page.py  pipeline.py  progress_worker.py
src/pages/fusion/left_half/: display_results.py  left_half.py
src/pages/fusion/left_half/layer_tools/: alignment_tools.py  base.py  (+2 more)
src/pages/fusion/right_half/: fusion_column.py  geometry_column.py  intravascular_column.py  right_half.py
src/pages/intravascular/: brush_panel.py  page.py  shortcuts.py
src/pages/intravascular/left_half/: display.py  left_half.py
src/pages/intravascular/popup_windows/: breathing_sort_viewer.py  frame_range_dialog.py  message_boxes.py  results_plot.py  small_display.py  video_player.py
src/pages/intravascular/right_half/: gating_display.py  longitudinal_view.py  right_half.py
src/pages/intravascular/utils/: contours_gui.py  helpers.py  metrics.py  slider.py
src/report/: report.py
src/segmentation/: predict.py  save_as_nifti.py  segment.py  segment_files.py
src/tools/: geometry.py  painting.py
test_cases/: anonymized_contours_1_3_2.json  anonymized_contours_1_4_0.json  anonymized_contours_1_8_0.json  anonymized_contours_ho_0_1_0.json
tests/: conftest.py  test_breathing_sort.py  test_gating.py  test_geometry.py  test_input_contours.py  test_input_metadata.py  test_left_half.py  test_main.py  test_master_gui.py  test_output_contours.py  test_shortcuts.py  test_tools_geometry.py
