[tool.poetry]
name = "aivus"
version = "1.3.2"
description = "AIVUS: AIVUS-CAA (coronary artery anomalies) AIVUS-OCT (optical coherence tomography)"
authors = ["yungselm", "cardionaut", "Pooya Mohammadi Kazaj"]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
loguru = "*"
tqdm = "*"
matplotlib = "*"
pandas ="*"
scipy = "*"
scikit-image = "*"
seaborn = "*"
pylint = "*"
hydra-core = "*"
omegaconf = "*"
numpy = "1.26.4"
pydicom = "2.4.4"
pylibjpeg = "*"
pylibjpeg-libjpeg = "*"
PyQt6 = "^6.10.2"
pyqtdarktheme = "^2.1.0"
shapely = "*"
SimpleITK = "*"
opencv-python-headless = "^4.9.0.80"
tensorflow = "^2.17.0"
# torch = { version = "2.4.0", source = "pytorch_cpu" }
# torchvision = { version = "0.19.0", source = "pytorch_cpu" }
# Windows with CUDA: see README Windows section for manual torch replacement
torch = { version = "2.4.0+cu118", source = "pytorch_cu118" }
torchvision = { version = "0.19.0+cu118", source = "pytorch_cu118" }

[tool.poetry.group.dev.dependencies]
autohooks = "^23.1.0"
autohooks-plugin-black = "^22.11.0"
autohooks-plugin-isort = "^22.8.0"
pytest = "^7.2.1"
pytest-qt = "^4.4.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
black = "^22.6.0"
isort = "^5.10.1"
mypy = "*"
ruff = "*"

[tool.autohooks]
mode = "poetry"
pre-commit = ["autohooks.plugins.black", "autohooks.plugins.isort"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
profile = "black"

[[tool.poetry.source]]
name = "pytorch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"