[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "holOrama"
dynamic = ["version"]
description = "holOrama: A PyQt6-based application for 3D visualization and analysis of cardiac images (IVUS, OCT and CT)."
authors = [
    { name = "yungselm" },
    { name = "cardionaut" },
    { name = "Pooya Mohammadi Kazaj" },
]
requires-python = ">=3.10, <3.12"
dependencies = [
    "loguru",
    "tqdm",
    "matplotlib",
    "pandas",
    "scipy",
    "scikit-image",
    "seaborn",
    "pylint",
    "numpy==1.26.4",
    "pydicom==2.4.4",
    "pylibjpeg",
    "pylibjpeg-libjpeg",
    "PyQt6>=6.10.2",
    "pyqtdarktheme>=2.1.0",
    "shapely",
    "SimpleITK",
    "opencv-python-headless>=4.9.0.80",
    "tensorflow>=2.17.0",
    "torch==2.4.0+cu118",
    "torchvision==0.19.0+cu118",
    "vtk",
    "nibabel",
    "dtcwt>=0.14.0",
]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest>=7.2.1",
    "pytest-qt>=4.4.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "black>=22.6.0",
    "isort>=5.10.1",
    "mypy",
    "ruff",
]

[tool.hatch.version]
path = "src/version.py"

[tool.uv]
package = false

[tool.uv.sources]
torch = [{ index = "pytorch-cu118" }]
torchvision = [{ index = "pytorch-cu118" }]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.mypy]
python_version = "3.10"
files = ["src"]
ignore_missing_imports = true

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
profile = "black"
